# lattes-extractor

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: main.py
app/domain/: entities.py  repository.py  user.py
app/infrastructure/db/: database.py  models.py
app/infrastructure/repositories/: researcher_repository.py
app/interface/: api.py  deps.py
app/interface/routers/: health.py
app/use_cases/: get_researcher.py  import_curriculum.py  list_researchers.py
tests/: conftest.py  researcher_raw_route_api.py  test_api.py  test_lattes_client_retry.py  test_student_extractor.py  test_teacher_extractor.py  test_xml_to_json.py
